homepage + list categories

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
-        "fzaninotto/faker": "^1.6"
+        "fzaninotto/faker": "^1.6",
+        "barryvdh/laravel-debugbar": "^2.3"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
