--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "laravel/framework": "5.3.*",
         "laravelcollective/html": "^5.3.0",
         "fzaninotto/faker": "^1.6",
-        "barryvdh/laravel-debugbar": "^2.3"
+        "barryvdh/laravel-debugbar": "^2.3",
+        "rap2hpoutre/laravel-log-viewer": "^0.8.0",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
